# cidr-calculator

./: .dockerignore  .gitignore  404.html  CNAME  Dockerfile  README.md  asset-manifest.json  go.mod  go.sum  index.html  index.txt  ip-ranges.json
backend-job/: closing.txt  ibm-cloud-data-centers.20221026.json  ibm-cloud-data-centers.20241024.json  ibm-cloud-data-centers.json  ips.old  ips.old.csv  main.go
data/: datacenters.json  datacenters.new.json
docs/: feedback.md  getting-started.md
frontend-api/: Dockerfile  main.go  workers.go
frontend-wasm/: Cargo.toml  README.md
frontend-wasm/pkg/: frontend_wasm.d.ts  frontend_wasm.js  frontend_wasm_bg.wasm  frontend_wasm_bg.wasm.d.ts  package.json
frontend-wasm/src/: lib.rs
networks/: 10.0.0.0.0.json  10.0.0.0.12.json  10.0.0.0.22.json  10.0.0.0.23.json  10.0.0.0.24.json  10.0.0.0.32.json  10.0.192.0.0.json  10.0.192.0.15.json  10.0.192.0.16.json  10.0.192.0.20.json  10.0.192.0.23.json  10.0.192.0.24.json  10.0.192.0.26.json  10.0.192.128.0.json  10.0.192.128.15.json  10.0.192.128.16.json  10.0.192.128.20.json  10.0.192.128.23.json  10.0.192.128.24.json  10.0.192.128.26.json  10.0.192.64.0.json  10.0.192.64.15.json  10.0.192.64.16.json  10.0.192.64.20.json  10.0.192.64.23.json  10.0.192.64.24.json  10.0.192.64.26.json  10.0.40.0.0.json  10.0.40.0.15.json  10.0.40.0.16.json  10.0.40.0.20.json  10.0.40.0.22.json  10.0.64.0.19.json  10.1.0.0.12.json  10.1.0.0.15.json  10.1.0.0.16.json  10.1.0.0.20.json  10.1.0.0.23.json  10.1.0.0.24.json  10.1.104.0.24.json  (+1890 more)
webui/: LICENSE  config-overrides.js  package-lock.json  (+3 more)
(+109 files in other folders)
