[package]
name = "frontend-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ipnetwork = "0.15"
js-sys = "0.3.45"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2" }
gloo-utils = { version = "0.2.0", features = ["serde"] }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
wasm-bindgen = []
web = []

[profile.dev]
js = true

[profile.release]
js = true